--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<title>Simple</title>
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="style.css" />
 		<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 	</head>
 	<body>
